# ocr-trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
ocr_trainer/: main.py
