[tool.poetry]
name = "ocr-trainer"
version = "0.1.0"
description = "My first attempt at training a CNN model for Optical Character Recognition"
authors = ["Color <jgstringer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
